fix ar button / model label overlap. Close #102

--- a/views/components/AvatarPreview.css
+++ b/views/components/AvatarPreview.css
@@ -58,8 +58,7 @@ img.avatarPreview {
   opacity: 0.75;
 }
 
-@media screen and (max-width: 679px) {
-  .avatarPreview.large, .avatarPreview.medium {
-    max-width: 100vw;
-  }
+model-viewer::part(default-ar-button) {
+  top: 16px;
+  bottom: unset;
 }
